; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-clock.c_ff_clock_start_time.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-clock.c_ff_clock_start_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ff_clock = type { i32, i32, i64 }

@AV_NOPTS_VALUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_clock_start_time(%struct.ff_clock* %0) #0 {
  %2 = alloca %struct.ff_clock*, align 8
  %3 = alloca i32, align 4
  store %struct.ff_clock* %0, %struct.ff_clock** %2, align 8
  %4 = load i32, i32* @AV_NOPTS_VALUE, align 4
  store i32 %4, i32* %3, align 4
  %5 = load %struct.ff_clock*, %struct.ff_clock** %2, align 8
  %6 = getelementptr inbounds %struct.ff_clock, %struct.ff_clock* %5, i32 0, i32 0
  %7 = call i32 @pthread_mutex_lock(i32* %6)
  %8 = load %struct.ff_clock*, %struct.ff_clock** %2, align 8
  %9 = getelementptr inbounds %struct.ff_clock, %struct.ff_clock* %8, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load %struct.ff_clock*, %struct.ff_clock** %2, align 8
  %14 = getelementptr inbounds %struct.ff_clock, %struct.ff_clock* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %12, %1
  %17 = load %struct.ff_clock*, %struct.ff_clock** %2, align 8
  %18 = getelementptr inbounds %struct.ff_clock, %struct.ff_clock* %17, i32 0, i32 0
  %19 = call i32 @pthread_mutex_unlock(i32* %18)
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
